# content-assimilation-engine

./: .codespellrc  .gitattributes  CMakeLists.txt  CMakePresets.json  CTestConfig.cmake  README.md  WARP.md  posix_api.cc  requirements.txt  wrp.cc
.github/workflows/: arm64-ubu-24-spack-0.23.0.yml  arm64-ubu-24-spack-1.0.0.a4.yml  astro.yml  codespell.yml  docker.yml  iowarp-setup.yml  mac-conda.yml  mac-omni-r.yml  mac13-conda.yml  pip.yml  spack.yml  ubu-22-spack-0.22.2.yml  ubu-22-spack-0.22.3.yml  ubu-24-spack-0.22.2.yml  ubu-24-spack-0.23.0-pure.yml  ubu-24-spack-0.23.0.yml  ubu-omni-r.yml  win-omni-r.yml
CMake/: HermesCommonConfig.cmake
adapters/: CMakeLists.txt
astro/: Doxyfile
astro/src/pages/: index.astro
data/: dset.yaml  f.csv  file_assets_gemini.csv  other_assets.csv  product.yaml
gsiftp/: Makefile  README.md  globus_download.c
omni/: CMakeLists.txt  OMNI.cc  OMNI.h  PROXY_CONFIG.md  aws.bat  aws.sh  aws_mac.sh  bld.bat-  cndaws.bat  conda_build_config.yaml  config.h.in  glo.cc  h5.bat  h5.cc  hdf5.bat  hermes.bat  hermes.sh  host.cc  meeting.txt  memc.bat  meta.yaml  mpi.bat  mpi.cc  mpi.sh  omni.5  par.cc  pat.cc  poco.bat  poco.sh  poco_mac.sh  posix.yml  redis.bat  run.bat  run_mac.sh  test.c  test.cpp  test2.c  test_datahub.cc  test_datahub.cpp  test_glo.cpp  (+10 more)
omni-old/: FilesystemRepoClient.cc  HDF5FormatClient.cc  HermesRepoClient.cc  ParquetFormatClient.cc  PosixFormatClient.cc  S3RepoClient.cc  factory.cc  factory.h  wrp.cc
omni-old/poco/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cae  cae.omni.yaml  cae.parquet  http  wrp
omni-old/poco/iowarp/: pyvenv.cfg
omni-old/test/: jpss.yml  jpss2.yml
omni/aws/: ALL_BUILD.vcxproj  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  OMNI.sln  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cae.omni.yaml  rget  wrp.vcxproj  wrp.vcxproj.filters
omni/aws/wrp.dir/Release/: wrp.exe.recipe
omni/aws/wrp.dir/Release/wrp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
omni/aws/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
omni/aws/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
omni/aws/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
omni/aws/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
omni/config/: balanced_concurrent_test.yaml  column_header.yaml  dataset_config.yaml  my_hostfile  omni_config_with_hdf5.yaml  tf.yaml  tf10.yaml  tf3d.yaml  tf3d_new_format.yaml  tf_all.yaml  tf_new_format.yaml  validate_balanced_concurrent.sh  wrp_config_sample
omni/format/: dataset_config.cc  dataset_config.h  format_factory.cc  globus_utils.cpp  hdf5_dataset_client.cc  hdf5_dataset_client.h
omni/hermes/: CMakeCache.txt  DartConfiguration.tcl
omni/poco/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  OMNI.sln  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cae.omni.yaml  wrp.vcxproj  wrp.vcxproj.filters
omni/poco/.blackhole/: ls
omni/poco/wrp.dir/Release/: wrp.exe.recipe
omni/poco/wrp.dir/Release/wrp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
omni/poco/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
omni/poco/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate
omni/poco/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
omni/poco/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
omni/regress/: wrp.mk
omni/run/: ALL_BUILD.vcxproj  CMakeCache.txt  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  OMNI.sln  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cae.omni.yaml  wrp.vcxproj  wrp.vcxproj.filters
omni/run/wrp.dir/Release/: wrp.exe.recipe
omni/run/wrp.dir/Release/wrp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
omni/run/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
omni/run/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.write.1.tlog
omni/run/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
omni/run/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
omni/test/: DATAHUB_TESTS.md  cae.parquet  datahub.yml  globus.yml  hash.yml  hdf5.bat  hdf5.py  hdf5.yml  http.yml  jpss.yml  jpss2.yml  lambda.bat  lambda.py-  lambda.sh  missing_both.yml  missing_name.yml  missing_tags.yml  odb.py~  path.yml  posix.yml  quiet_test.yml  redi.yml  rget.yml  scp.yml  services.txt  test_datahub.bat  test_datahub.sh
omni/test/iowarp/: pyvenv.cfg
omni/test/jarvis_wrp/jarvis_wrp/wrp/: pkg.py
omni/test/jarvis_wrp/pipelines/: wrp.yaml
recipe/: build.bat  meta.yaml
test/unit/adapters/: CMakeLists.txt
(+3 files in other folders)
